# rest-api-server

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
src/: app.py
